--- a/quartz-plus-core/pom.xml
+++ b/quartz-plus-core/pom.xml
@@ -6,10 +6,11 @@
   <parent>
     <groupId>io.github.unionj-cloud</groupId>
     <artifactId>quartz-plus</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
 
   <artifactId>quartz-plus-core</artifactId>
+  <name>quartz-plus-core</name>
 
   <dependencies>
     <dependency>
