--- a/quartz-plus-core/pom.xml
+++ b/quartz-plus-core/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.github.unionj-cloud</groupId>
     <artifactId>quartz-plus</artifactId>
-    <version>0.0.2</version>
+    <version>0.0.3-SNAPSHOT</version>
   </parent>
 
   <artifactId>quartz-plus-core</artifactId>
