--- a/quartz-plus-core/pom.xml
+++ b/quartz-plus-core/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.github.unionj-cloud</groupId>
     <artifactId>quartz-plus</artifactId>
-    <version>0.0.3</version>
+    <version>0.0.4-SNAPSHOT</version>
   </parent>
 
   <artifactId>quartz-plus-core</artifactId>
@@ -53,6 +53,10 @@
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-quartz</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.opentelemetry.instrumentation</groupId>
+      <artifactId>opentelemetry-quartz-2.0</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
