--- a/quartz-plus-boot/src/main/resources/application.properties
+++ b/quartz-plus-boot/src/main/resources/application.properties
@@ -25,5 +25,14 @@ quartz.scheduler.simple-job-a.thread-name-prefix=SimpleJobA_
 quartz.scheduler.simple-job-a.table-prefix=QRTZ_
 quartz.scheduler.simple-job-a.clustered=true
 quartz.scheduler.simple-job-a.description=simple job a
-quartz.scheduler.simple-job-a.enabled=true
+quartz.scheduler.simple-job-a.enabled=false
 quartz.scheduler.simple-job-a.auto-startup=true
+
+quartz.scheduler.simple-job-b.instance-name=SimpleJobBSchedulerWb
+quartz.scheduler.simple-job-b.thread-count=8
+quartz.scheduler.simple-job-b.thread-name-prefix=SimpleJobB_
+quartz.scheduler.simple-job-b.table-prefix=QRTZ_
+quartz.scheduler.simple-job-b.clustered=true
+quartz.scheduler.simple-job-b.description=simple job b
+quartz.scheduler.simple-job-b.enabled=true
+quartz.scheduler.simple-job-b.auto-startup=true
